update - atualizacao na tag span com a barra de texto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-  <h1>Eu sou um: <span data-text></span><span class="text-bar">|</span></h1>
+  <div class="container">
+    <h1>
+      Hi! I'm
+      <span data-text></span><span class="text-bar">&nbsp;</span>
+    </h1>
+  </div>
 </body>
 
 </html>
